--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "jquery": "^3.6.4",
+    "jspdf": "^2.5.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "~1.2.9",
@@ -71,6 +72,7 @@
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "passport": "^0.6.0",
+    "pdfmake": "^0.2.7",
     "popper.js": "^1.16.1",
     "postcss-loader": "^7.1.0",
     "roboto-fontface": "0.8.0",
@@ -101,6 +103,7 @@
     "@types/jasmine": "~3.3.0",
     "@types/jasminewd2": "2.0.3",
     "@types/jquery": "^3.5.16",
+    "@types/jspdf": "^2.0.0",
     "@types/leaflet": "1.2.3",
     "@types/node": "^12.12.70",
     "@typescript-eslint/eslint-plugin": "5.27.1",
@@ -126,6 +129,6 @@
     "tslint-language-service": "^0.9.9",
     "typescript": "~4.6.4",
     "webpack": "^5.76.2",
-    "webpack-sources": "^3.2.3" 
+    "webpack-sources": "^3.2.3"
   }
 }
