--- a/package.json
+++ b/package.json
@@ -58,10 +58,13 @@
     "core-js": "2.5.1",
     "echarts": "^4.9.0",
     "eva-icons": "^1.1.3",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "jquery": "^3.6.4",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "~1.2.9",
@@ -130,6 +133,6 @@
     "tslint-language-service": "^0.9.9",
     "typescript": "~4.6.4",
     "webpack": "^5.76.2",
-    "webpack-sources": "^3.2.3" 
+    "webpack-sources": "^3.2.3"
   }
 }
